address a variety of form related issues Removes hover states from form elements, closes #868 Rationalizes use of line height and font size in form elements, closes #862 Includes line heights for all --s and --xs form modifiers, closes #855 Changes input and select areas to use box shadow for borders, which aligns them to pixel grid without the need for special cased withs or line heights Adds --xs modifiers to all form elements

--- a/src/forms.css
+++ b/src/forms.css
@@ -30,7 +30,8 @@
  */
 .input,
 .textarea {
-  border: 1px solid var(--gray-light);
+  box-shadow: inset 0 0 0 1px var(--gray-light);
+  padding: 6px 12px;
   border-radius: var(--border-radius);
   transition: background-color var(--transition),
     border-color var(--transition);
@@ -40,17 +41,12 @@
 
 .input:focus,
 .textarea:focus {
-  border-color: var(--default-primary-interactive-color);
+  box-shadow: inset 0 0 0 1px var(--default-primary-interactive-color);
 }
 
 .input::placeholder,
 .textarea::placeholder {
   color: var(--inactive-text-color);
-}
-
-/* Without this, IE always has a scrollbar */
-.textarea {
-  overflow: auto;
 }
 
 /* Remove bad padding and unique cancel button from IE and Safari inputs */
@@ -72,27 +68,36 @@
  * Style a text input. Set the color of the border with a `input--border-{color}` modifier (`*-dark` colors are not available).
  *
  * @memberof Inputs & textareas
+ * @selectors .input
  * @example
  * <input class='input' placeholder='default' />
  * <input class='input input--border-green w240' placeholder='green' />
  */
-.input {
-  height: 36px;
-  line-height: 34px; /* minus border */
-  padding: 0 12px;
-}
 
 /**
  * Make an input small.
  *
  * @memberof Inputs & textareas
  * @example
- * <input class='input input--s txt-s' placeholder='small' />
+ * <input class='input input--s' placeholder='small' />
  */
 .input--s {
-  height: 24px;
-  line-height: 22px; /* minus border */
-  padding: 0 6px;
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-s);
+  padding: 3px 6px;
+}
+
+/**
+ * Make an input extra small.
+ *
+ * @memberof Inputs & textareas
+ * @example
+ * <input class='input input--xs' placeholder='extra small' />
+ */
+.input--xs {
+  font-size: var(--font-size-xs);
+  line-height: var(--line-height-xs);
+  padding: 0 4px;
 }
 
 /**
@@ -105,21 +110,34 @@
  */
 .textarea {
   resize: vertical;
-  padding-top: 10px; /* minus border to match input */
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  /* Without this, IE always has a scrollbar */
+  overflow: auto;
 }
 
 /**
- * Make a textarea small.
+ * Make a textarea extra small.
  *
  * @memberof Inputs & textareas
  * @example
- * <textarea class='textarea textarea--s txt-s'>small textarea</textarea>
+ * <textarea class='textarea textarea--s'>small textarea</textarea>
  */
 .textarea--s {
-  padding: 0 4px;
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-s);
+  padding: 3px 6px;
+}
+
+/**
+ * Make a textarea extra small.
+ *
+ * @memberof Inputs & textareas
+ * @example
+ * <textarea class='textarea textarea--xs'>extra small textarea</textarea>
+ */
+.textarea--xs {
+  font-size: var(--font-size-xs);
+  line-height: var(--line-height-xs);
+  padding: 0 3px;
 }
 
 /**
@@ -135,7 +153,7 @@
   pointer-events: none;
   color: var(--darken50) !important;
   background-color: var(--disabled-secondary-interactive-color) !important;
-  border-color: var(--disabled-primary-interactive-color) !important;
+  box-shadow: inset 0 0 0 1px var(--disabled-primary-interactive-color) !important;
 }
 
 /* Using the attribute selector instead of the pseudo-class `:read-only`
@@ -194,8 +212,8 @@ because it seems to be more cross-browser consistent with all HTML5 input types 
 
 .select {
   appearance: none;
-  line-height: inherit;
-  font-size: inherit;
+  font-size: var(--font-size-m);
+  line-height: var(--line-height-m);
   font-weight: bold;
   color: currentColor;
   padding: 6px 30px 6px 12px; /* plus arrow */
@@ -322,8 +340,9 @@ because it seems to be more cross-browser consistent with all HTML5 input types 
  * </div>
  */
 .select--s {
-  font-size: 12px;
-  padding: 0 20px 0 6px; /* plus arrow */
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-s);
+  padding: 3px 20px 3px 6px; /* plus arrow */
 }
 
 .select--s + .select-arrow {
@@ -344,8 +363,8 @@ because it seems to be more cross-browser consistent with all HTML5 input types 
  * </div>
  */
 .select--xs {
-  font-size: 10px;
-  line-height: 18px;
+  font-size: var(--font-size-xs);
+  line-height: var(--line-height-xs);
   padding: 0 20px 0 6px; /* plus arrow */
 }
 
@@ -648,10 +667,6 @@ because it seems to be more cross-browser consistent with all HTML5 input types 
     background-color var(--transition);
 }
 
-.checkbox-container:hover > .checkbox {
-  border-color: var(--default-primary-interactive-color-dark);
-}
-
 /* Ensure checkboxes inside buttons look nice */
 .btn:not(.btn--stroke) > .checkbox {
   border-color: var(--transparent);
@@ -700,10 +715,6 @@ because it seems to be more cross-browser consistent with all HTML5 input types 
   border-radius: 50%;
   color: var(--default-secondary-interactive-color);
   border-color: currentColor;
-}
-
-.radio-container:hover > .radio {
-  color: var(--default-primary-interactive-color-dark);
 }
 
 .radio::before {
@@ -928,15 +939,7 @@ input:checked + .checkbox {
   background-color: var(--default-primary-interactive-color);
 }
 
-.checkbox-container:hover > input:checked + .checkbox {
-  background-color: var(--default-primary-interactive-color-dark);
-}
-
 /* state management for switches */
-.switch-container:hover > .switch {
-  color: var(--default-primary-interactive-color);
-}
-
 input:checked + .switch::after {
   left: calc(50% + 1px);
   background-color: var(--white);
@@ -948,11 +951,6 @@ input:checked + .switch {
 }
 
 /* state management for toggles */
-.toggle:hover {
-  color: var(--default-primary-interactive-color);
-  border-color: var(--default-primary-interactive-color);
-}
-
 input:checked + .toggle {
   background: var(--default-primary-interactive-color);
   color: var(--white);
